add_executable(relaxed_ordering src/cpp/relaxed_ordering.cpp)
add_executable(spawn_join src/cpp/spawn_join.cpp)
add_executable(relaxed_ordering_total_modification_order
               src/cpp/relaxed_ordering_total_modification_order.cpp)
add_executable(relaxed_ordering_total_modification_order_v2
               src/cpp/relaxed_ordering_total_modification_order_v2.cpp)
add_executable(acquire_release src/cpp/acquire_release.cpp)
